[package]
name = "rust-playground"
version = "0.1.0"
authors = ["Kristoffer Andersson <kod.kristoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "latin2cyrillic",
    "kxparser",
    "more-money",
    "ds-13",
    "statelist",
    "persi-ds",
    "chart-parser",
]

[dependencies]
