[package]
name = "more-money"
version = "0.1.0"
authors = ["Kristoffer Andersson <kod.kristoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
persi-ds = { path = "../persi-ds" }
ds-13 = { path = "../ds-13" }

